[package]
name = "clove1gk"
version = "0.0.0"
edition = "2024"
description="Modular authentication & authorization middleware for Rust — JWT pipeline with Axum and Actix-web support."
license = "MIT"

[dependencies]
http = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
jsonwebtoken = "9.3.1"
axum = "0.8.8"
tower = "0.5.3"
tokio = { version = "1.50.0", features = ["full"] }
async-trait = "0.1.89"
actix-web = "4.13.0"

[dev-dependencies]
actix-web = { version = "4.13.0", features = ["macros"] }